--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,17 @@
 body{
     margin: 0;
 }
+
+
+
+
+::-webkit-scrollbar {
+    width: 0.3em;
+}
+::-webkit-scrollbar-track{
+    box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.2);
+}
+::-webkit-scrollbar-thumb{
+    background-color: rgba(255,255,255, .3);
+    outline: 1px solid slategrey;
+}
